--- a/nginx-deployment/nginx-all-with-pvc.yml
+++ b/nginx-deployment/nginx-all-with-pvc.yml
@@ -34,7 +34,7 @@ spec:
     spec:
       containers:
       - name: nginx
-        image: nginx:1.7.9
+        image: nginx:stable
         ports:
         - containerPort: 80
         volumeMounts:
